# ByteBoost-

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  next_steps.md  package-lock.json  package.json  techbible.md
.claude/: settings.local.json
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/api/app/: main.py  models.py  schemas.py
apps/api/app/api/: auth.py  comments.py  courses.py  health.py  live.py  payments.py  uploads.py
apps/api/app/core/: config.py  limiter.py
apps/api/app/db/: database.py
apps/web/: package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/courses/: page.tsx
apps/web/app/courses/[id]/: page.tsx
apps/web/app/instructor/: page.tsx
apps/web/app/live-classes/: page.tsx
apps/web/app/my-courses/: page.tsx
apps/web/app/payment/[courseId]/: page.tsx
apps/web/components/: comments.tsx  footer.tsx  navbar.tsx  providers.tsx  video-player.tsx
apps/web/lib/: api.ts
